--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,6 @@
 unreleased:
+  new features:
+    - GH-1003 Added support for `pm.vault` VariableScope
   fixed bugs:
     - GH-1018 Fixed warnings for all `postman.*` legacy APIs
   chores:
