--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  chores:
+    - Allowed access to `pm.vault` only when `vaultSecrets` is set
+
 5.1.0:
   date: 2024-07-29
   new features:
