--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,6 @@
+unreleased:
+  fixed bugs:
+    - GH-1037 Reduced memory footprint by dereferencing bootCode
 5.1.1:
   date: 2024-08-01
   fixed bugs:
