--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  fixed bugs:
+    - GH-1034 Fixed an issue where sandbox crashes for large response body
+
 5.1.2:
   date: 2024-09-04
   fixed bugs:
