--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -4,6 +4,7 @@ unreleased:
   new features:
     - GH-1032 Enhanced performance when operating on buffers in Node environment
     - GH-1035 Added missing buffer APIs to expose a uniform interface across environments
+    - GH-1051 Exposed `File` globally
 
 5.1.1:
   date: 2024-08-01
