--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,5 @@
+breaking changes:
+    - GH-1052 Dropped support for Node < v18
 unreleased:
   fixed bugs:
     - GH-1036 Fixed `uncaughtException` event listener not being removed
